<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLinearLayout"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="4dp">

        <LinearLayout
            android:id="@+id/contentLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/stngsBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="@string/goto_stngs"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/bkmrksBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="@string/goto_bkmrks"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/adrBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="@string/adr"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/rfrshBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="@string/rfrsh"
            style="@android:style/Widget.Material.Button.Borderless" />

        <Button
            android:id="@+id/bkBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/bk_sgn"
            android:textSize="24sp"
            style="@android:style/Widget.Material.Button.Borderless" />

    </LinearLayout>
</LinearLayout>